--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-spring.application.name=habit
-
-server.port = 8087
-server.address = 0.0.0.0
+server.port=8087
+spring.datasource.url=jdbc:postgresql://dpg-cu4r1obtq21c73dsvo40-a.oregon-postgres.render.com:5432/habit_tracker_db_2tex
+spring.datasource.username=habit_tracker_db_2tex_user
+spring.datasource.password=lZdIE3an839Vv2vxGYET2jdgirPPSRUL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3307/habit_tracker_db
-spring.datasource.username= root
-spring.datasource.password= Jammu@123
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
