fixed port variable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8087
+server.port=${PORT:8087}
 spring.datasource.url=jdbc:postgresql://dpg-cu4r1obtq21c73dsvo40-a.oregon-postgres.render.com:5432/habit_tracker_db_2tex
 spring.datasource.username=habit_tracker_db_2tex_user
 spring.datasource.password=lZdIE3an839Vv2vxGYET2jdgirPPSRUL
