--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 server.port=${PORT:8087}
-spring.datasource.url=jdbc:postgresql://dpg-cu4r1obtq21c73dsvo40-a.oregon-postgres.render.com:5432/habit_tracker_db_2tex
-spring.datasource.username=habit_tracker_db_2tex_user
-spring.datasource.password=lZdIE3an839Vv2vxGYET2jdgirPPSRUL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# MySQL Database Connection
+spring.datasource.url=jdbc:mysql://mainline.proxy.rlwy.net:39524/railway?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=FcDySLHjKEuNrgEaUCMaAiwAiTSzZAur
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate (JPA) Config
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
